# spacy-loggers

./: .gitignore  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
spacy_loggers/: chain.py  clearml.py  console.py  cupy.py  errors.py  lookup.py  mlflow.py  pytorch.py  util.py  wandb.py
spacy_loggers/tests/: test_chain.py  test_lookup.py  test_registry.py
