[metadata]
version = 1.0.2
description = Logging utilities for SpaCy
url = https://github.com/explosion/spacy-loggers
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    wasabi>=0.8.1,<1.1.0

[options.entry_points]
spacy_loggers =
    spacy.WandbLogger.v3 = spacy_loggers.wandb:wandb_logger_v3
    spacy.WandbLogger.v2 = spacy_loggers.wandb:wandb_logger_v2
    spacy.WandbLogger.v1 = spacy_loggers.wandb:wandb_logger_v1
    spacy.MLflowLogger.v1 = spacy_loggers.mlflow:mlflow_logger_v1

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    spacy_loggers/__init__.py
