[metadata]
version = 1.0.4
description = Logging utilities for SpaCy
url = https://github.com/explosion/spacy-loggers
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6

[options.entry_points]
spacy_loggers =
    spacy.WandbLogger.v5 = spacy_loggers.wandb:wandb_logger_v5
    spacy.WandbLogger.v4 = spacy_loggers.wandb:wandb_logger_v4
    spacy.WandbLogger.v3 = spacy_loggers.wandb:wandb_logger_v3
    spacy.WandbLogger.v2 = spacy_loggers.wandb:wandb_logger_v2
    spacy.WandbLogger.v1 = spacy_loggers.wandb:wandb_logger_v1
    spacy.MLflowLogger.v1 = spacy_loggers.mlflow:mlflow_logger_v1
    spacy.ClearMLLogger.v1 = spacy_loggers.clearml:clearml_logger_v1
    spacy.ChainLogger.v1 = spacy_loggers.chain:chain_logger_v1
    spacy.PyTorchLogger.v1 = spacy_loggers.pytorch:pytorch_logger_v1
    spacy.LookupLogger.v1 = spacy_loggers.lookup:lookup_logger_v1

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    spacy_loggers/__init__.py
